--- a/beetcave/templates/index.html
+++ b/beetcave/templates/index.html
@@ -16,7 +16,7 @@
                   <img src="{{ item.images }}">
                 </figure>
               </div>
-              <div class="card-content has-background-white-ter" style="padding: 1rem 1.5rem;">
+              <div class="card-content has-background-white" style="padding: 1rem 1.5rem;">
                 <div class="level">
                   <div class="level-left" style="flex-flow: column; align-items: start;">
                     <p class="subtitle is-6">{{ item.category }}</p>
